--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "@tanstack/react-query": "^5.48.0",
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "localforage": "^1.10.0",
@@ -23,6 +24,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "sort-by": "^0.0.2",
