--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.48.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "localforage": "^1.10.0",
