--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8",
     "sort-by": "^0.0.2",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
