--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.1",
     "@mui/material": "^5.15.15",
     "@tanstack/react-query": "^5.48.0",
     "aos": "^2.3.4",
