--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.12.3",
     "moment": "^2.30.1",
+    "package": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
