--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
+    "sonner": "^1.7.0",
     "sort-by": "^0.0.2",
     "sweetalert": "^2.1.2",
     "swiper": "^11.1.4"
