--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.15.0",
     "sonner": "^1.7.0",
     "sort-by": "^0.0.2",
     "sweetalert": "^2.1.2",
